package model;

public class Bike extends Vehicle {
    public Bike(String id, String address) {
        super(id, address, VehicleType.BIKE);
    }
}
