package model;

public class Car extends Vehicle {
    public Car(String id, String address) {
        super(id, address, VehicleType.CAR);
    }
}
