package model;

public class Truck extends Vehicle {
    public Truck(String id, String address) {
        super(id, address, VehicleType.TRUCK);
    }
}
